<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="tom_javorsk">Tomáš Javorský</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="about">Im an IT student currently in my final year of my master\'s. I have been developing
    games and interactive apps for mobile devices in Unity during my internship in Brazil. Before that I made an
    app called Alertside in Android studio and released it on Google Play. I have also contributed 3D models
    to Dota2 workshop. My bachelor\'s thesis was covering a topic about parallel processing on GPU using CUDA.
    Right now I would like to continue developing for Android. Im looking for a company with a driven team
    which share the same values and at the same time have clear solid strategy for the developed product.</string>

    <string name="education">Education</string>
    <string name="education_bachelors1">Bachelor\'s degree in Applied Informatics.</string>
    <string name="education_bachelors2">Faculty of Informatics Masaryk University - 2014</string>
    <string name="education_bachelors3">Thesis: Terrain generation on the GPU
    Implementation and comparison of algorithms generating
    random height maps resembling real terrain using CPU
    and GPU variants.</string>

    <string name="education_masters1">Master\'s degree in SSME</string>
    <string name="education_masters2">Faculty of Informatics Masaryk University - 2014+</string>
    <string name="education_masters3">Currently studying in field Service Science, Management, and Engineering.</string>

    <string name="experience_imax1">Unity developer</string>
    <string name="experience_imax2">iMax Games, São Carlos - Brazil,\nOct 2015 - May 2016</string>
    <string name="experience_imax3">3D modelling of ingame assets, level design, creation and animation of 3D assets
    for interactive book, programing modules for inhouse development tool Unify.</string>

    <string name="experience_skills1">Skills</string>
    <string name="experience_skills2">Java / Android, C / Cuda, Git, Photoshop, ZBrush, Cinema4D, Unity</string>

    <string name="experience_languages1">Languages</string>
    <string name="exoerience_languages2">English - Proficient\nGerman - Basic\nJapanese - Basic</string>

    <string name="projects_android">I \'ve developed own app for web api data retrieval. Used service class for
    repeated querying and multiple fragments for showing data status. The app was published on Google Play
    and had over 200 downloads and about quarter of that were active users. Later however the data changed and the info which it provided was not
    very beneficial anymore, so I have taken it down. Since I have created this app from scratch all by myself,
    it has proven to be a very hard and tedious task, but on the other hand it gave me a lot of experience.</string>

    <string name="projects_cuda">Completed course about Heterogeneous Parallel Programming and received statement of accomplishment with
    distinction in 2013 - http://bit.ly/1DMVmJa . Done bachelor\'s thesis using Visual Studio with Nvidia Nsight about terrain generation algorithms.
    Here are some examples of Random Faults algorythm which is only viable if implemented on GPU:</string>

    <string name="projects_unity">Developed personal game project Tunel Smash. Single machine multiplayer game which mixes
    attributes of original DOS Tunneler game and Minecraft. GIT: https://github.com/7Tomus/Tunel-Smash.git\nI have also worked on
    a plugin module for Unify which rendered mathematical functions and provided huge customizability</string>

    <string name="projects_dota">Created 3D set of items for game Dota2. Process involved low-poly modelling,
        high-poly sculpting, UV-unwrapping, texturing, applying shader values, skinning and creation of marketing materials.
        Link: http://steamcommunity.com/sharedfiles/filedetails/?id=174186897</string>

    <string name="interests_volu1">Volunteering</string>
    <string name="interests_volu2">Preservation of environment\nWorkcamps by IJGD, SIW and NICE</string>
    <string name="interests_volu3">Hann. Münden - Germany - 2006\nAmeland - Holland -  2007\nGevelsberg - Germany - 2008\nShiiba - Japan - 2014</string>
    <string name="interests_other_header">My other interests are:</string>
    <string name="interests_other">Basketball, Snowboarding, Running, Outdoor Workout, Hiking, Online Gaming, Tutoring in ISC MU Brno</string>

    <string name="contact_name">Tomáš Javorský</string>
    <string name="contact_mail">email:</string>
    <string name="contact_mail_address">tomuso.o@gmail.com</string>
    <string name="contact_linkedin">linkedin:</string>
    <string name="contact_linkedin_address">/linkedin.com/in/tomasJavorsky</string>

</resources>
